# rusty_clips

./: Cargo.toml
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  password.rs  shortcode.rs
