[package]
name = "clip_stash"
version = "0.1.0"
edition = "2021"

[lib]
name = "clip_stash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
derive_more = "0.99"
rand = "0.8"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
] }
sqlx-macros = "0.8.3"
